[package]
name = "jsh"
version = "0.1.0"
edition = "2024"
description = "The simplest cli app to display prayer schedules for Indonesian regions"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.54", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
